# imap_dmarc_extract

./: Cargo.toml  README.md  deny.toml
src/: main.rs
