[package]
name = "imap_dmarc_extract"
version = "0.1.0"
authors = ["Aaron Lauterer <aaron@lauterer.at>"]
license = "AGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
rpassword = "5.0.1"
imap = "2.4.1"
native-tls = "0.2.4"
mailparse = "0.13.0"
anyhow = "1.0.38"
zip = { version = "0.5", features = ["deflate"] }
libflate = "1"
